# diploma-public

./: .gitignore  COLAB_VERSION_AUDIT.md  LICENSE  README.md  SECURITY_AUDIT.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: baseline_masked_packed.ipynb  eval_ru_mt_bench_fastchat_official.ipynb  ifd_select.py  selection_entropy.ipynb  selection_ifd.ipynb  selection_loss_rho.ipynb  selection_quality_classifier.ipynb
tests/: conftest.py  test_ifd_select.py
